turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:25: error: type mismatch;
 found   : Double
 required: Int
x=getX();y=getY()
      ^Source:25: error: type mismatch;
 found   : Double
 required: Int
x=getX();y=getY()
               ^