turtleart.lessons.turtleart.Main.HouseMany.scala.code
override def run() {
var x=0 ; var y = 0
def carre(c:Double) {
	for (k <-0 to 3) {
	avance(c)
	droite(90)}
}

def triangle(t:Double) {
	for (k <-0 to 2) {
	droite(30)
	avance(t)
	droite(90)}
}

def house(h:Double) {
carre(h)
avance(h)
triangle(h)
recule(h)

}

x=getX();y=getY()
for (k <- 0 to 3) {                  // programme
house(30)
setX(getX()+50)
}
setPos(x,y)
}
